update allowed shader list